# dsfb

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  LICENSE-MIT  README.md
crates/dsfb/: Cargo.toml  README.md  dsfb_simulation.ipynb  sim.csv
crates/dsfb-add/: Cargo.toml  README.md  dsfb_add_results_replay.ipynb  dsfb_add_sweep.ipynb
crates/dsfb-add/src/: aet.rs  config.rs  iwlt.rs  lib.rs  output.rs  rlt.rs  sweep.rs  tcp.rs
crates/dsfb-atlas/: CHANGELOG.md  CITATION.cff  Cargo.toml  NOTICE  README.md  SAFETY.md  SECURITY.md
crates/dsfb-atlas/audit/: AUDIT.md  README.md
crates/dsfb-atlas/colab/: atlas_minimal.sty  dsfb_atlas_reproduce.ipynb
crates/dsfb-atlas/src/: bib_emit.rs  dedup.rs  generator.rs  index_emit.rs  lib.rs  main.rs  schema.rs
crates/dsfb-atlas/tests/: atlas_end_to_end.rs
crates/dsfb-bank/: Cargo.toml  README.md
crates/dsfb-bank/colab/: dsfb_bank_repro.ipynb
crates/dsfb-bank/spec/: add_theorems.yaml  core_theorems.yaml  dscd_theorems.yaml  dsfb_theorems.yaml  hret_theorems.yaml  realizations.yaml  srd_theorems.yaml  tmtr_theorems.yaml
crates/dsfb-bank/src/: cli.rs  csv_writer.rs  lib.rs  main.rs  output.rs  registry.rs  run_summary.rs  timestamp.rs
crates/dsfb-bank/tests/: integration.rs
crates/dsfb-battery/: .gitignore  Cargo.toml  LICENSE-COMMERCIAL.md  README.md
crates/dsfb-battery/config/: heuristics_bank_v1.json  heuristics_bank_v1.sha256
crates/dsfb-battery/docs/: embedded-integration.md  engineer_extensions.md  fail_silent_contract.md  heuristics_bank_maturity.md  paper_wording_alignment.md
crates/dsfb-battery/ffi/: README.md  dsfb_battery_addendum_example.c
crates/dsfb-battery/heuristics/: heuristics_bank_v2.json  heuristics_bank_v2.sha256
crates/dsfb-battery/include/: dsfb_battery_ffi.h
crates/dsfb-battery/notebooks/: dsfb_battery_demo.ipynb
crates/dsfb-battery/sbir-partner-template/: README.md  milestone-table.md  sample-licensing-term-sheet.md  shadow-mode-integration-blueprint.md
crates/dsfb-battery/schemas/: dsfb_battery_audit_trace.schema.json  dsfb_battery_heuristics_bank.schema.json  dsfb_battery_heuristics_bank_v2.schema.json
crates/dsfb-battery/src/: ablation.rs  addendum.rs  audit.rs  complexity.rs  compliance.rs  detection.rs  engineer_plots.rs  evaluation.rs  export.rs  ffi.rs  heuristics.rs  integration.rs  lib.rs  math.rs  multicell.rs  nasa.rs  noise_robustness.rs  output_paths.rs  plotting.rs  resource_trace.rs  sbir_demo.rs  sensitivity.rs  sota.rs  types.rs
crates/dsfb-battery/tools/: extract_nasa_b0005.py  extract_nasa_fy08q4_cells.py
crates/dsfb-computer-graphics/: .gitignore  CURRENT_STATUS.md  Cargo.toml  README.md  SCENE_INDEX.md
crates/dsfb-computer-graphics/colab/: build_artifact_bundle.py  build_unreal_native_bundle.py  dsfb_computer_graphics_demo.ipynb  dsfb_unreal_native_evidence.ipynb  sbir_demo_report.py
crates/dsfb-computer-graphics/docs/: DATASET_SCHEMA.md  EVIDENCE_WORKFLOW.md  FAILURE_MODES.md  REPRODUCIBILITY.md  UNREAL_CAPTURE_GUIDE.md  async_compute_analysis.md  colab_notebook.md  completion_gates.md  completion_note.md  cost_model.md  custom_renderer_export_playbook.md  dataset_mapping.md  demo_b_production_integration.md  engine_capture_last_mile_plan.md  engine_capture_schema.md  engine_integration_playbook.md  evaluator_handoff.md  external_dataset_plan.md  external_handoff.md  external_replay.md  final_blocker_removal_plan.md  final_completion_gates.md  final_last_mile_plan.md  frame_graph_position.md  gpu_execution_path.md  gpu_implementation.md  gpu_path.md  integration_surface.md  outstanding_blockers_plan.md  production_eval_bridge.md  unity_export_playbook.md  unreal_export_playbook.md  upgrade_plan.md  validation_contract.md
crates/dsfb-computer-graphics/examples/: davis_external_manifest.json  engine_native_buffer_schema.json  engine_native_capture_manifest.json  external_buffer_schema.json  (+3 more)
crates/dsfb-database/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md  SAFETY.md  SECURITY.md  deny.toml
crates/dsfb-ddmf/: Cargo.toml  README.md  dsfb_ddmf_colab.ipynb  dsfb_ddmf_colab.py  dsfb_ddmf_colab_latest.ipynb  dsfb_ddmf_colab_live.ipynb  dsfb_ddmf_colab_public.ipynb
crates/dsfb-dscd/: Cargo.toml  README.md  dscd_sweep.ipynb  dsfb_dscd_results_replay.ipynb
crates/dsfb-endoduction/: Cargo.toml  README.md  dsfb_endoduction_nasa_bearings_colab.ipynb
crates/dsfb-forensics/: Cargo.toml  README.md  dsfb_forensics_repro.ipynb
crates/dsfb-fusion-bench/: .gitignore  Cargo.toml  NOTEBOOK_README.md  README.md  dsfb_fusion_figures.ipynb
crates/dsfb-gray/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SAFETY.md  SECURITY.md
crates/dsfb-hret/: Cargo.toml  README.md  hret_hypersonic_validation.ipynb
crates/dsfb-lattice/: .gitignore  Cargo.toml  README.md  dsfb_lattice_colab.ipynb
crates/dsfb-lcss-hret/: .gitignore  Cargo.toml  README.md  dsfb-lcss-hret-correlated.ipynb  dsfb_lcss_hret_figures.ipynb
crates/dsfb-oil-gas/: .gitignore  CITATION.cff  Cargo.toml  LICENSE  NOTICE  README.md
crates/dsfb-rf/: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONVENTIONS.md  Cargo.toml  NOTICE  README.md  REPRODUCE.md  SAFETY.md  SECURITY.md  rust-toolchain.toml
crates/dsfb-robotics/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  Cargo.toml  NOTICE  README.md  README_REVIEWER.md  REPRODUCE.md  SAFETY.md  SECURITY.md  deny.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
crates/dsfb-semiconductor/: .gitignore  Cargo.toml  README.md  dsfb_semiconductor.ipynb
crates/dsfb-semiotics-calculus/: .gitignore  Cargo.toml  README.md
crates/dsfb-semiotics-engine/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  dsfb_semiotics_engine_colab.ipynb  justfile  kani.toml
crates/dsfb-srd/: Cargo.toml  README.md
crates/dsfb-starship/: Cargo.toml  README.md  pyproject.toml  starship_reentry_demo.ipynb
crates/dsfb-swarm/: .gitignore  Cargo.toml  README.md
crates/dsfb-tmtr/: .gitignore  Cargo.toml  LICENSE  README.md
crates/dsfb-turbine/: Cargo.toml  README.md
(+1268 files in other folders)
