[workspace]
members = [
    "crates/dsfb",
    "crates/dsfb-bank",
    "crates/dsfb-fusion-bench",
    "crates/dsfb-starship",
    "crates/dsfb-hret",
    "crates/dsfb-ddmf",
    "crates/dsfb-add",
    "crates/dsfb-dscd",
    "crates/dsfb-endoduction",
]
default-members = ["crates/dsfb"]
resolver = "2"
