[package]
name = "dsfb-battery"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Riaan de Beer"]
license = "Apache-2.0"
description = "DSFB structural semiotics engine for battery health monitoring: deterministic early-warning framework for capacity fade, resistance drift, and knee-onset detection"
repository = "https://github.com/infinityabundance/dsfb"
homepage = "https://github.com/infinityabundance/dsfb"
readme = "README.md"
keywords = ["dsfb", "battery", "health-monitoring", "deterministic", "semiotics"]
categories = ["science", "algorithms"]
include = [
    "src/**",
    "schemas/**",
    "config/**",
    "compliance/**",
    "docs/**",
    "ffi/**",
    "formal/**",
    "heuristics/**",
    "include/**",
    "wrappers/**",
    "Cargo.toml",
    "README.md",
]

[workspace]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
default = ["std"]
std = [
    "alloc",
    "dep:chrono",
    "dep:clap",
    "dep:csv",
    "dep:plotters",
    "dep:serde_json",
    "dep:sha2",
    "dep:zip",
    "serde/std",
]
alloc = ["serde/alloc"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
clap = { version = "=4.5.23", features = ["derive"], optional = true }
csv = { version = "1.3", optional = true }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
static_assertions = "1.1"
thiserror = "2.0"
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

[lib]
name = "dsfb_battery"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "dsfb-battery-demo"
path = "src/bin/dsfb_battery_demo.rs"
required-features = ["std"]

[[bin]]
name = "dsfb-battery-multicell"
path = "src/bin/dsfb_battery_multicell.rs"
required-features = ["std"]

[[bin]]
name = "dsfb-battery-ablation"
path = "src/bin/dsfb_battery_ablation.rs"
required-features = ["std"]

[[bin]]
name = "dsfb-battery-sensitivity"
path = "src/bin/dsfb_battery_sensitivity.rs"
required-features = ["std"]

[[bin]]
name = "dsfb-battery-noise-robustness"
path = "src/bin/dsfb_battery_noise_robustness.rs"
required-features = ["std"]

[[bin]]
name = "dsfb-battery-sota-compare"
path = "src/bin/dsfb_battery_sota_compare.rs"
required-features = ["std"]

[[bin]]
name = "dsfb-battery-engineer"
path = "src/bin/dsfb_battery_engineer.rs"
required-features = ["std"]

[[bin]]
name = "dsfb-battery-verify-heuristics"
path = "src/bin/dsfb_battery_verify_heuristics.rs"
required-features = ["std"]

[[bin]]
name = "dsfb-battery-heuristics-bank"
path = "src/bin/dsfb_battery_heuristics_bank.rs"
required-features = ["std"]

[[bin]]
name = "dsfb-battery-resource-trace"
path = "src/bin/dsfb_battery_resource_trace.rs"
required-features = ["std"]

[[bin]]
name = "dsfb-battery-compliance"
path = "src/bin/dsfb_battery_compliance.rs"
required-features = ["std"]

[[bin]]
name = "dsfb-battery-addendum"
path = "src/bin/dsfb_battery_addendum.rs"
required-features = ["std"]
