[package]
name = "dsfb-computer-graphics"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
default-run = "dsfb-computer-graphics"
license = "Apache-2.0"
description = "Minimal DSFB-for-computer-graphics research artifact for temporal accumulation supervision"
readme = "README.md"
repository = "https://github.com/infinityabundance/dsfb"
homepage = "https://github.com/infinityabundance/dsfb"
keywords = ["dsfb", "graphics", "taa", "temporal", "research"]
categories = ["science", "graphics", "command-line-utilities"]
include = [
    "src/**",
    "tests/**",
    "docs/**",
    "colab/**",
    "generated/**",
    "Cargo.toml",
    "README.md",
]

[workspace]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.24.9", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "dsfb_computer_graphics"
path = "src/lib.rs"

[[bin]]
name = "dsfb-computer-graphics"
path = "src/main.rs"
