[workspace]

# IP Notice. The theoretical framework, formal constructions, and supervisory
# methods described herein constitute proprietary Background IP of Invariant
# Forge LLC (Delaware LLC No. 10529072), with prior art established by this
# publication and earlier Zenodo DOI publications by the same author.
# Commercial deployment requires a separate written license. Reference
# implementations are released under Apache 2.0.
# Licensing: licensing@invariantforge.net

[package]
name = "dsfb-database"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Riaan de Beer <riaan@invariantforge.net>"]
default-run = "dsfb-database"
description = "DSFB-Database: deterministic, read-only structural observer for residual trajectories in SQL database telemetry. Empirical prior-art demonstration on Snowset, SQLShare, CEB, JOB, and TPC-DS."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/infinityabundance/dsfb"
homepage = "https://github.com/infinityabundance/dsfb"
keywords = ["dsfb", "database", "observability", "residual", "sql"]
categories = ["science", "command-line-utilities"]
include = [
    "src/**",
    "spec/**",
    "tests/**",
    "examples/**",
    "colab/dsfb_database_repro.ipynb",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "NOTICE",
    "CITATION.cff",
]

[dependencies]
dsfb = "0.1.2"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"
rand = "0.8"
rand_pcg = "0.3"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "ttf"] }

[dev-dependencies]
tempfile = "3"

[lib]
name = "dsfb_database"
path = "src/lib.rs"

[[bin]]
name = "dsfb-database"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
