[package]
name = "dsfb-ddmf"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Riaan de Beer"]
license = "Apache-2.0"
description = "Deterministic disturbance and residual-envelope Monte Carlo tooling built on top of DSFB"

[dependencies]
csv = "1.3"
dsfb = { path = "../dsfb" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
