[package]
name = "dsfb-ddmf"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
authors = ["Riaan de Beer"]
license = "Apache-2.0"
description = "Deterministic disturbance and residual-envelope Monte Carlo tooling built on top of DSFB"
repository = "https://github.com/infinityabundance/dsfb"
homepage = "https://github.com/infinityabundance/dsfb"
documentation = "https://docs.rs/dsfb-ddmf"
readme = "README.md"
keywords = ["disturbance-modeling", "monte-carlo", "residual-envelope", "trust-weighting", "simulation"]
categories = ["science", "simulation", "algorithms"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
]

[dependencies]
csv = "1.3"
dsfb = { version = "0.1.2", path = "../dsfb" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
