[package]
name = "dsfb-dscd"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
default-run = "dsfb-dscd"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
csv = "1.3"
dsfb = { path = "../dsfb" }
dsfb-add = { path = "../dsfb-add" }
rand = "0.8"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

[lib]
name = "dsfb_dscd"
path = "src/lib.rs"

[[bin]]
name = "dsfb-dscd"
path = "src/main.rs"

[[bin]]
name = "dsfb_dscd_main"
path = "src/bin/dsfb_dscd_main.rs"
