[package]
name = "dsfb-fusion-bench"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Riaan de Beer"]
license = "Apache-2.0"
description = "Deterministic synthetic benchmarking and plotting data generator for DSFB fusion diagnostics"
repository = "https://github.com/infinityabundance/dsfb"
homepage = "https://github.com/infinityabundance/dsfb"
documentation = "https://docs.rs/dsfb-fusion-bench"
readme = "README.md"
keywords = ["benchmark", "fusion", "diagnostics", "estimation", "simulation"]
categories = ["science", "algorithms", "command-line-utilities"]
include = [
    "src/**",
    "configs/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "NOTEBOOK_README.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
nalgebra = "0.33"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
